# mininet-agentic-interactive

./: .gitignore  README.md  config.py  main.py  pyproject.toml  team.py  topology.py
agents/: net_diag.py  net_manager.py  network_ops.py  switch.py  team.py  topology_architect.py  traffic_generator.py
tools/: context.py  flows.py  iperf.py  net_management.py  ping.py  routing.py  switch_stats.py
utils/: flows.py  hooks.py  neighbors.py
