[project]
name = "mininet-agentic-interactive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.4",
    "mininet>=2.3.0.dev6",
    "networkx>=3.6.1",
    "ollama>=0.6.1",
    "openai>=2.33.0",
    "rich>=15.0.0",
]
